Code checking and small fix in ResultPageLinks